Fixes layout problems with more than 11 players.

--- a/src/Draw/Client/Components/PlayerDisplay.razor.css
+++ b/src/Draw/Client/Components/PlayerDisplay.razor.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100%;
     height: 64px;
+    min-height: 52px;
     background-color: #ffffffaa;
     padding: 1px 10px;
     font-size: 20px;
