--- a/src/Draw/Client/Components/PlayerList.razor.css
+++ b/src/Draw/Client/Components/PlayerList.razor.css
@@ -9,4 +9,6 @@
     gap: 4px;
     border-right: 2px solid white;
     max-width: 335px;
+    max-height: 756px;
+    overflow-y: auto;
 }
